--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" role="buttonF">Manage<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">save data</a></li>
                         <li><a href="#">fetch data</a></li>
